# async-task-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
migrations/: env.py
migrations/versions/: 2026_07_20_1720_initial.py  2026_07_20_212123_initial.py
src/: broker.py  consumer.py  main.py
src/api/v1/: tasks.py
src/common/: config.py  enums.py
src/db/: engine.py
src/db/models/: __init__.py  base.py  outbox.py  task.py
src/repositories/: task.py
src/schemas/: task.py
src/services/: executor.py  task.py
src/workers/: outbox.py
tests/: conftest.py  test_api.py  test_executor.py
tests/integration/: test_task_flow.py
