[project]
name = "async-task-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.18.5",
    "asyncpg==0.31.0",
    "fastapi==0.139.2",
    "faststream[rabbit]==0.7.2",
    "httpx==0.28.1",
    "pydantic-settings==2.14.2",
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "sqlalchemy[asyncio]==2.0.51",
    "uvicorn[standard]==0.51.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.22",
]
